# neurokeeper

./: .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-hooks.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SECURITY.md  THIRD-PARTY-LICENSES.md  action.yml  pyproject.toml  requirements-dev.txt
.claude-plugin/: marketplace.json  plugin.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: deploy-wiki.yml  example-vault.yml  release.yml  test.yml
bootstrap/: RUNBOOK.md  bootstrap.ps1  bootstrap.sh  repos.example.txt  tools-manifest.md
bootstrap/hooks/: pre-push
bootstrap/test/: README.md  test-bootstrap.ps1  test-bootstrap.sh
claude_harness/: __init__.py  cli.py
config.example/: cheap-lane.env.example  frontmatter-schema.example.yaml  harness.config.example.yaml
docs/: DISTRIBUTION.md  SOURCES.md  adr-0001-backend-contract.md  adr-0002-doctor-exit-semantics.md  capability-registry.md  ci-adapters.md  competitive-landscape.md  obsidian-integration.md  pattern-portable-core-and-adapters.md  roadmap.md  two-lane-model-handoff.md
examples/vault/: README.md  overview.canvas
examples/vault/02 - Projects/: migration-plan.md  sample-project.md
examples/vault/05 - Knowledge/: portable-core.md
hooks/: hooks.json
neurokeeper/: __init__.py  cli.py
prompts/: memory-audit.md
scripts/: _audit.py  _backend.py  _findings.py  _vault_guard.py  _vault_lib.py  check-release.py  memory-consolidate.py  registry-generate.py  vault-doctor.py  vault-frontmatter-fix.py  vault-frontmatter-lint.py  vault-name-reconcile.py  vault-ref-audit.py  vault-set-note-type.py  vault-tag-reconcile.py  vault-taxonomy-inventory.py
skills/memory-audit/: SKILL.md
tests/: conftest.py  test_audit.py  test_backend.py  test_ci_adapters.py  test_doctor.py  test_findings.py  test_frontmatter_fix.py  test_lint_inventory.py  test_memory_consolidate.py  test_name_reconcile.py  test_ref_audit.py  test_release_and_example.py  test_set_note_type.py  test_tag_reconcile.py  test_vault_guard.py  test_vault_lib.py  test_wiki_coverage.py
wiki/: README.md  quartz.config.ts  quartz.layout.ts
wiki/content/: index.md
wiki/content/brand/: index.md
wiki/content/explanation/: index.md
wiki/content/how-to/: index.md
wiki/content/reference/: index.md
wiki/content/tutorials/: index.md
